--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -45,13 +45,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="products" id="productsNavItem">
-            PRODUCTS
+          <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
+            PURCHASE
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="purchases" id="purchasesNavItem">
-            PURCHASE
+          <a class="nav-link" href="products" id="productsNavItem">
+            PRODUCTS
           </a>
         </li>
       </ul>
@@ -206,8 +206,10 @@
                         style="display: none;">
                         <strong>ERROR: </strong> <span id="checkoutErrorMsg"></span>
                       </div>
-                      <input type="text" id="customerPhNumber" class="form-control  dropdown-toggle" placeholder="Search Customer Ph.No"
-                        aria-label="Search Customer Ph.No" aria-describedby="searchCustomerPhNumber" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                      
+                      <input type="text" id="customerPhNumber" class="form-control  dropdown-toggle"
+                        placeholder="Search Customer Ph.No" aria-label="Search Customer Ph.No"
+                        aria-describedby="searchCustomerPhNumber" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                       <div class="dropdown-menu col-md-11" aria-labelledby="customerPhNumber" id="customerSearchList">
                       </div>
                     </div>
