--- a/src/main/resources/static/purchase.html
+++ b/src/main/resources/static/purchase.html
@@ -45,14 +45,14 @@
             CUSTOMERS
           </a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
+            PURCHASE
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="products" id="productsNavItem">
             PRODUCTS
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#" id="purchasesNavItem">
-            PURCHASE
           </a>
         </li>
       </ul>
@@ -69,7 +69,7 @@
           </button>
         </div>
         <div class="col-lg-6">
-          <input type="text" id="customerSearch" class="form-control  dropdown-toggle" placeholder="Select Customer"
+          <input type="text" id="customerSearch" class="form-control  dropdown-toggle" placeholder="Select Supplier"
             aria-label="Search Customer" aria-describedby="customerSearch" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false" v-model="selectedCustomerName">
           <div class="dropdown-menu col-md-11" aria-labelledby="customerSearch" id="customerSearchList">
