--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -41,14 +41,14 @@
             CUSTOMERS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
+            PURCHASE
+          </a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="#" id="productsNavItem">
             PRODUCTS
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="purchases" id="purchasesNavItem">
-            PURCHASE
           </a>
         </li>
       </ul>
@@ -108,7 +108,8 @@
                     <form>
                       <div class="form-group">
                         <label for="productName">Product Name*</label>
-                        <input type="text" class="form-control" id="productName" aria-describedby="productHelp" autocomplete="off">
+                        <input type="text" class="form-control" id="productName" aria-describedby="productHelp"
+                          autocomplete="off">
                         <small id="productHelp" class="form-text text-muted">Please provide a name for the product. This
                           will be used to search a product.</small>
                       </div>
@@ -118,7 +119,8 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="productPrice">Price</label>
-                      <input type="text" class="form-control" id="productPrice" aria-describedby="priceHelp" autocomplete="off">
+                      <input type="text" class="form-control" id="productPrice" aria-describedby="priceHelp"
+                        autocomplete="off">
                       <small id="priceHelp" class="form-text text-muted">Please provide the selling price of the
                         product. If not provided, the price will be set to 0.</small>
                     </div>
